--- a/Métricas.ipynb
+++ b/Métricas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "6640da07",
    "metadata": {},
    "outputs": [],
@@ -13,29 +13,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 31,
    "id": "3388cd68",
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = np.load(r'C:\\Users\\mylar\\OneDrive\\Área de Trabalho\\MovingMNIST-main\\Testes\\PredRNN5\\prediction.npy')\n",
-    "targets = np.load(r'C:\\Users\\mylar\\OneDrive\\Área de Trabalho\\MovingMNIST-main\\Testes\\PredRNN5\\target.npy')"
+    "#Carrega os arrays gerados na previsão.\n",
+    "\n",
+    "predictions = np.load(r'C:\\Users\\mylar\\OneDrive\\Área de Trabalho\\PredRNN-Radar\\prediction.npy')\n",
+    "targets = np.load(r'C:\\Users\\mylar\\OneDrive\\Área de Trabalho\\PredRNN-Radar\\target.npy')\n",
+    "\n",
+    "radpredictions = np.load(r'C:\\Users\\mylar\\OneDrive\\Área de Trabalho\\PredRNN-Radar\\rad-prediction.npy')\n",
+    "radtargets = np.load(r'C:\\Users\\mylar\\OneDrive\\Área de Trabalho\\PredRNN-Radar\\rad-target.npy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 32,
    "id": "a52074e3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Seleciona as primeiras 10 imagens previstas para teste.\n",
+    "\n",
+    "\n",
     "predictions = np.squeeze(predictions)\n",
-    "predictions = predictions[:, :10, :, :]"
+    "predictions = predictions[:, :10, :, :]\n",
+    "\n",
+    "\n",
+    "radpredictions = np.squeeze(radpredictions)\n",
+    "radpredictions = radpredictions[:, :10, :, :]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 30,
    "id": "767b0146",
    "metadata": {},
    "outputs": [
@@ -43,49 +55,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rms error: 0.18891242\n"
+      "rmse error: 0.15839641\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Função para calcular o RMSE (Raiz quadrada do erro-médio).\n",
+    "\n",
+    "def rmse(predictions, targets):\n",
+    "    return np.sqrt(((predictions - targets) ** 2).mean())\n",
+    "\n",
+    "rmse_val = rmse(targets, predictions)\n",
+    "print(\"rmse error: \" + str(rmse_val))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "9e0753e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse error: 0.145034\n"
      ]
     }
    ],
    "source": [
     "def rmse(predictions, targets):\n",
-    "    return np.sqrt(((predictions - targets) ** 2).mean())\n",
+    "    return np.sqrt(((radpredictions - radtargets) ** 2).mean())\n",
     "\n",
-    "rmse_val = rmse(targets, predictions)\n",
-    "print(\"rms error: \" + str(rmse_val))"
+    "rmse_val = rmse(radtargets, radpredictions)\n",
+    "print(\"rmse error: \" + str(rmse_val))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "737e8b50",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "ed81ea0e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8, 19, 16, 16, 16)"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "1af5869a",
+   "id": "e8da0c31",
    "metadata": {},
    "outputs": [],
    "source": []
